<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="sdo_EL6695_diag" Id="{0b3895bf-93f6-4db2-9512-4a9afd232093}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '4'}
TYPE sdo_EL6695_diag :
STRUCT
	identify : USINT;
	status : UINT;
	cpu_usage : UINT;
	heap_usage : UINT;
	aoe_packets: UINT;
	eoe_packets : UINT;
	foe_packets : UINT;
	soe_packets : UINT;
	voe_packets : UINT;
	other_pacekts: UINT;
	mbx_info : UINT;
	pd_copy_time_my: UINT;
	pd_copy_time_remote :UINT;
	info_2 : UINT;
	info_3 : UINT;
	info_4 : UINT;
	info_5 : UINT;
	info_6 : UINT;
	info_7 : UINT;
	info_8 : UINT;
	info_9 : UINT;
	info_10 : UINT;
	info_11 : UINT;
	info_12 : UINT;
	info_13 : UINT;
	info_14 : UINT;
	info_15 : UINT;
	info_16: UINT;
	info_17 : UINT;
	info_18 : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>