<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="sdo_slave_identity" Id="{2947d836-db4a-457e-a22c-397f7ea3308f}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE sdo_slave_identity :
STRUCT
	identify : USINT;
	vendor_id : UDINT;
	product_code : UDINT;
	revision : UDINT;
	serial_number : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>